unpackaged/main/default/objects/ET_Customer_Vehicle__c/ET_Customer_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Customer Vehicle</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>