unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Vehicles</relationshipLabel>
    <relationshipName>Customer_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>