unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/ADFCA_Type__c.field-meta.xml
<CustomField>
    <fullName>ADFCA_Type__c</fullName>
    <defaultValue>&quot;Without ADFCA&quot;</defaultValue>
    <label>ADFCA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With ADFCA</fullName>
            </value>
            <value>
                <fullName>Without ADFCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>