unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/AMAN_Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>AMAN_Vehicle_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAN Vehicle No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>