unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>