unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Vehicles</relationshipLabel>
    <relationshipName>Customer_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>