unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>