unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Encrypted_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encrypted Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>