unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine No</label>
    <length>150</length>
    <type>Text</type>
</CustomField>