unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/ET_Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_type__c</fullName>
    <label>Vehicle Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>