unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Internal No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>