unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Is_Tcf_No_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Tcf_No_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tcf No Changed?</label>
    <type>Checkbox</type>
</CustomField>