unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Is_Terms_and_Conditions_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_Terms_and_Conditions_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Terms and Conditions Checked</label>
    <type>Checkbox</type>
</CustomField>