unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Is_Vehicle_Synched__c.field-meta.xml
<CustomField>
    <fullName>Is_Vehicle_Synched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vehicle Synched</label>
    <type>Checkbox</type>
</CustomField>