unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verified with AbuDhabi Police?</label>
    <type>Checkbox</type>
</CustomField>