unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Items_Transported__c.field-meta.xml
<CustomField>
    <fullName>Items_Transported__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Items Transported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>