unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Kind_Code__c.field-meta.xml
<CustomField>
    <fullName>Kind_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kind Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>