unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Kind_Code_AR__c.field-meta.xml
<CustomField>
    <fullName>Kind_Code_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kind Code AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>