unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>