unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Permit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Permit_Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permit Purpose</label>
    <length>150</length>
    <type>Text</type>
</CustomField>