unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Permit_Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>Permit_Purpose_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permit Purpose Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>