unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Plate_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Plate_Color_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Color Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>