unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Plate_Source__c.field-meta.xml
<CustomField>
    <fullName>Plate_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>