unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Registration_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Expiry Date</label>
    <type>Date</type>
</CustomField>