unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Un-Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>