unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Registration_Type_AR__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type_AR__c</fullName>
    <label>Registration Type AR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>مسجلة</fullName>
            </value>
            <value>
                <fullName>غير مسجلة</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>