unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Selected_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Type__c</fullName>
    <label>Selected Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plate Combination</fullName>
            </value>
            <value>
                <fullName>Chassis No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>