unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Selected_Type_AR__c.field-meta.xml
<CustomField>
    <fullName>Selected_Type_AR__c</fullName>
    <label>Selected Type AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plate Combination</fullName>
                <label>بيانات اللوحة</label>
            </value>
            <value>
                <fullName>Chassis No</fullName>
                <label>رقم القاعدة</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>