unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Tcf_No__c.field-meta.xml
<CustomField>
    <fullName>Tcf_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tcf No</label>
    <length>150</length>
    <type>Text</type>
</CustomField>