unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>