unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Color2__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Color 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>