unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Color_Code1__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color_Code1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Color Code 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>