unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Family__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>