unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Make_AR__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Make AR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>