unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Model_AR__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Model AR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>