unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Type_AR__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type_AR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Type AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>