unpackaged/main/default/objects/ET_Customer_Vehicle__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>