unpackaged/main/default/objects/ET_Customer_Vehicle__c/recordTypes/Registered_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Registered_Vehicle</fullName>
    <active>true</active>
    <label>Registered Vehicle</label>
</RecordType>