unpackaged/main/default/objects/ET_Customer_Vehicle__c/recordTypes/Un_Registered_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Un_Registered_Vehicle</fullName>
    <active>true</active>
    <label>Un-Registered Vehicle</label>
</RecordType>