unpackaged/main/default/objects/ET_Customer_Vehicle__c/validationRules/License_Expiry_Date_should_be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>License_Expiry_Date_should_be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Trade_License_Expiry_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Trade_License_Expiry_Date__c</errorDisplayField>
    <errorMessage>Trade License Expiry Date Should Be Future</errorMessage>
</ValidationRule>