unpackaged/main/default/objects/ET_Customer_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chassis_No__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Plate_No__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>