unpackaged/main/default/objects/ET_Customer_Vehicle__c/listViews/Registered_Vehicles.listView-meta.xml
<ListView>
    <fullName>Registered_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>Chassis_No__c</columns>
    <columns>Registration_Type__c</columns>
    <columns>Plate_No__c</columns>
    <columns>Plate_Type__c</columns>
    <columns>Plate_Color__c</columns>
    <columns>Plate_Source__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>Registered Vehicles</label>
</ListView>